--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-18 23:24-0400\n"
-"PO-Revision-Date: 2012-08-15 05:49+0000\n"
-"Last-Translator: Wang Dianjin <Unknown>\n"
+"PO-Revision-Date: 2015-08-21 11:22+0000\n"
+"Last-Translator: aerowolf <aerowolf@tom.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-20 05:55+0000\n"
+"X-Launchpad-Export-Date: 2015-08-22 05:53+0000\n"
 "X-Generator: Launchpad (build 17690)\n"
 "Language: \n"
 
@@ -28,23 +28,23 @@ msgstr "从菜单中添加或移除应用程序"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "添加启动器"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "添加目录"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr ""
+msgstr "添加分隔"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "应用程序的常用名称，比如“网络浏览器”。"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "Generic Name"
-msgstr ""
+msgstr "常用名称"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid ""
@@ -53,10 +53,12 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"此项目不应该出现在这些桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：GNOME、KDE、LXDE、MATE、Razor、ROX、TDE、U"
+"nity、XFCE、Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
-msgstr ""
+msgstr "不在其中显示"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid ""
@@ -66,10 +68,12 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"此项目应当出现在这些桌面环境，而还是其它桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：GNOME、KDE、LXDE、MATE、Razor、"
+"ROX、TDE、Unity、XFCE、Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
-msgstr ""
+msgstr "仅在其中显示"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid ""
