Launchpad automatic translations update.

--- a/po/nl.po
+++ b/po/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-08-18 23:24-0400\n"
-"PO-Revision-Date: 2015-08-23 21:54+0000\n"
+"PO-Revision-Date: 2015-08-24 12:46+0000\n"
 "Last-Translator: Pjotr12345 <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-24 05:21+0000\n"
+"X-Launchpad-Export-Date: 2015-08-25 05:56+0000\n"
 "X-Generator: Launchpad (build 17690)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -84,6 +84,9 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
+"Pad naar een uitvoerbaar bestand, om vast stellen of het programma is "
+"geïnstalleerd. Indien het bestand niet aanwezig of uitvoerbaar is, kan dit "
+"invulveld niet worden getoond in een menu."
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "Try Exec"
@@ -104,6 +107,10 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
+"Een lijst van sleutelwoorden om dit invulveld te beschrijven. U kunt deze "
+"gebruiken om te helpen met het zoeken van invulvelden. Deze zijn niet "
+"bedoeld om getoond te worden, en zouden niet overeen moeten komen met de "
+"waarden van Name of GenericName."
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "Keywords"
@@ -114,6 +121,9 @@ msgid ""
 "If specified, the application will be requested to use the string as a WM "
 "class or a WM name hint at least in one window."
 msgstr ""
+"Indien opgegeven, zal de toepassing worden verzocht om de tekenreeks te "
+"gebruiken als een WM-klasse of als een wenk voor een WM-naam in tenminste "
+"één venster."
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Startup WM Class"
@@ -124,6 +134,8 @@ msgid ""
 "If set to \"True\", the result for the user is equivalent to the .desktop "
 "file not existing at all."
 msgstr ""
+"Indien ingesteld op \"True\", is het resultaat voor de gebruiker hetzelfde "
+"als wanneer het .desktop-bestand in het geheel niet bestaat."
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Hidden"
@@ -136,6 +148,10 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "for more information."
 msgstr ""
+"Stel deze sleutel in op \"True\" indien D-Bus-activatie wordt ondersteund "
+"voor deze toepassing en u die wil gebruiken.\n"
+"Zie http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
+"voor meer informatie."
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "DBUS Activatable"
@@ -210,6 +226,11 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
+"Programma om uit te voeren met argumenten. Deze sleutel is vereist indien "
+"DBusActivatable niet is ingesteld op \"True\" of indien u verenigbaarheid "
+"nodig hebt met implementaties die D-Bus-activatie niet begrijpen.\n"
+"Zie http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
+"latest.html#exec-variables voor een lijst met ondersteunde argumenten."
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Command"
@@ -242,6 +263,9 @@ msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
 msgstr ""
+"Indien ingesteld op \"True\", wordt er een opstartmelding verzonden. Dit "
+"betekent gewoonlijk dat er een bezige muispijl wordt getoond terwijl de "
+"toepassing opstart."
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Use startup notification"
@@ -252,6 +276,8 @@ msgid ""
 "If set to \"True\", this entry will not be shown in menus, but will be "
 "available for MIME type associations etc."
 msgstr ""
+"Indien ingesteld op \"True\", zal het invulveld niet worden getoond in "
+"menu's, maar wel beschikbaar zijn voor bestandsoortassociaties (MIME)."
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Hide from menus"
