--- a/po/de.po
+++ b/po/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-08-18 23:24-0400\n"
-"PO-Revision-Date: 2014-06-05 15:45+0000\n"
+"PO-Revision-Date: 2015-08-25 12:54+0000\n"
 "Last-Translator: Tobias Bannert <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-20 05:55+0000\n"
+"X-Launchpad-Export-Date: 2015-08-26 06:13+0000\n"
 "X-Generator: Launchpad (build 17690)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -161,11 +161,11 @@ msgstr "DBus-Aktivierbar"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Symbole durchsuchen …"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Files..."
-msgstr ""
+msgstr "Dateien durchsuchen …"
 
 #: ../data/ui/MenulibreWindow.ui.h:27 ../menulibre/Dialogs.py:38
 #: ../menulibre/MenulibreApplication.py:236
@@ -352,7 +352,7 @@ msgstr "Über MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
-msgstr ""
+msgstr "Urheberrecht © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
@@ -545,7 +545,7 @@ msgstr "Weitere"
 
 #: ../menulibre/MenulibreApplication.py:213
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "MenuLibre kann nicht als Systemverwalter ausgeführt werden."
 
 #: ../menulibre/MenulibreApplication.py:214
 msgid ""
@@ -553,6 +553,9 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Für weitere Informationen, bitte die <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>Internetdokumentatio"
+"n</a> beachten."
 
 #: ../menulibre/MenulibreApplication.py:310
 msgid "Add _Launcher..."
