--- a/po/es.po
+++ b/po/es.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-18 23:24-0400\n"
-"PO-Revision-Date: 2015-08-21 22:45+0000\n"
-"Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
+"PO-Revision-Date: 2015-08-27 16:44+0000\n"
+"Last-Translator: Eugenio González <eugeagb@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-22 05:53+0000\n"
+"X-Launchpad-Export-Date: 2015-08-28 05:51+0000\n"
 "X-Generator: Launchpad (build 17690)\n"
 "Language: es\n"
 
@@ -54,7 +54,7 @@ msgid ""
 "XFCE, Old"
 msgstr ""
 "Lista de entornos de escritorio que no deberían mostrar este elemento. Solo "
-"puedes usar esta clave si «OnlyShowIn» no está activada.\n"
+"puede usar esta clave si «OnlyShowIn» no está activada.\n"
 "Entre los valores posibles se incluyen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
 "TDE, Unity, XFCE, Old"
 
@@ -71,7 +71,7 @@ msgid ""
 "XFCE, Old"
 msgstr ""
 "Lista de entornos de escritorio que deberían mostrar este elemento. Los "
-"demás entornos no mostrarán este elemento. Solo puedes usar esta clave si "
+"demás entornos no mostrarán este elemento. Solo puede  usar esta clave si "
 "«NotShowIn» no está activada.\n"
 "Entre los valores posibles se incluyen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
 "TDE, Unity, XFCE, Old"
@@ -226,7 +226,7 @@ msgid ""
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
 "Programa para ejecutar con argumentos. Se requiere esta clave si "
-"DBusActivatable no está establecido a \"Verdadero\" o si necesita "
+"DBusActivatable no está establecido a «Verdadero» o si necesita "
 "compatibilidad con implementaciones que no entienden la activación D-Bus.\n"
 "Ir a http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables para ver la lista de argumentos soportados."
