--- a/po/pt.po
+++ b/po/pt.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-08-18 23:24-0400\n"
-"PO-Revision-Date: 2014-08-21 10:35+0000\n"
+"PO-Revision-Date: 2015-09-09 16:38+0000\n"
 "Last-Translator: David Pires <Unknown>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-20 05:55+0000\n"
-"X-Generator: Launchpad (build 17690)\n"
+"X-Launchpad-Export-Date: 2015-09-10 06:17+0000\n"
+"X-Generator: Launchpad (build 17706)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -158,11 +158,11 @@ msgstr "DBUS Activatable"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Navegar Icons..."
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Files..."
-msgstr ""
+msgstr "Navegar Ficheiros..."
 
 #: ../data/ui/MenulibreWindow.ui.h:27 ../menulibre/Dialogs.py:38
 #: ../menulibre/MenulibreApplication.py:236
@@ -349,7 +349,7 @@ msgstr "Sobre o MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
-msgstr ""
+msgstr "Copyright © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
@@ -537,7 +537,7 @@ msgstr "Outro"
 
 #: ../menulibre/MenulibreApplication.py:213
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "MenuLibre não pode ser executado como root."
 
 #: ../menulibre/MenulibreApplication.py:214
 msgid ""
@@ -545,6 +545,9 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Por favor veja a <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>documentação on-"
+"line</a> para obter mais informações."
 
 #: ../menulibre/MenulibreApplication.py:310
 msgid "Add _Launcher..."
