--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+20 Sep 2015, MenuLibre 2.1.1
+
+- Updated Translations:
+  . Chinese (Simplified), Czech, Dutch, Finnish, German, Greek,
+    Lithuanian, Portuguese, Russian, Slovenian, Spanish
+
+
 18 Aug 2015, MenuLibre 2.1.0
 
 - General:
