--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2014-03-28 04:04+0000\n"
-"Last-Translator: leo523 <Unknown>\n"
+"PO-Revision-Date: 2014-09-05 17:54+0000\n"
+"Last-Translator: Eduardo Júnio S. Macêdo <eduardojuniosm@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-09-27 05:35+0000\n"
+"X-Launchpad-Export-Date: 2015-09-27 05:41+0000\n"
 "X-Generator: Launchpad (build 17754)\n"
 "Language: pt_BR\n"
 
