--- a/po/el.po
+++ b/po/el.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2015-08-19 11:16+0000\n"
-"Last-Translator: Lefteris Pavlou <lepa.22@hotmail.com>\n"
+"PO-Revision-Date: 2014-03-13 11:10+0000\n"
+"Last-Translator: Filippos Kolyvas <Unknown>\n"
 "Language-Team: Greek <el@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-09-27 05:41+0000\n"
+"X-Launchpad-Export-Date: 2015-09-28 06:11+0000\n"
 "X-Generator: Launchpad (build 17754)\n"
 "Language: el\n"
 
