--- a/po/pl.po
+++ b/po/pl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2014-05-20 10:28+0000\n"
+"PO-Revision-Date: 2015-11-23 15:31+0000\n"
 "Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-09-28 06:11+0000\n"
-"X-Generator: Launchpad (build 17754)\n"
+"X-Launchpad-Export-Date: 2015-11-24 05:36+0000\n"
+"X-Generator: Launchpad (build 17850)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
@@ -135,11 +135,11 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Przeglądaj ikony..."
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Files..."
-msgstr ""
+msgstr "Przeglądaj pliki..."
 
 #: ../data/ui/MenulibreWindow.ui.h:27 ../menulibre/Dialogs.py:38
 #: ../menulibre/MenulibreApplication.py:236
@@ -315,7 +315,7 @@ msgstr "O MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
-msgstr ""
+msgstr "Prawa autorskie © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
@@ -507,7 +507,7 @@ msgstr "Inne"
 
 #: ../menulibre/MenulibreApplication.py:213
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "MenuLibre nie może być uruchamiane w trybie administratora."
 
 #: ../menulibre/MenulibreApplication.py:214
 msgid ""
@@ -515,6 +515,9 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Prosimy zobaczyć <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>dokumentację "
+"online</a> celem dalszych informacji."
 
 #: ../menulibre/MenulibreApplication.py:312
 msgid "Add _Launcher..."
