--- a/po/eo.po
+++ b/po/eo.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2015-12-22 13:01+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-12-25 15:31+0000\n"
+"Last-Translator: Robin van der Vliet <info@robinvandervliet.com>\n"
 "Language-Team: Esperanto <eo@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-12-23 05:12+0000\n"
+"X-Launchpad-Export-Date: 2015-12-26 05:31+0000\n"
 "X-Generator: Launchpad (build 17865)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -27,15 +27,15 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Aldoni _lanĉilon"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "Aldoni _dosierujon"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr ""
+msgstr "Aldoni _apartigilon"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Generic name of the application, for example \"Web Browser\"."
@@ -43,7 +43,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "Generic Name"
-msgstr ""
+msgstr "Ĝenerala nomo"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid ""
@@ -87,7 +87,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Mimetypes"
-msgstr ""
+msgstr "MIME-tipoj"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid ""
@@ -148,7 +148,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Save Launcher"
-msgstr ""
+msgstr "Konservi lanĉilon"
 
 #: ../data/ui/MenulibreWindow.ui.h:29 ../menulibre/MenulibreApplication.py:341
 msgid "Undo"
@@ -160,23 +160,23 @@ msgstr "Refari"
 
 #: ../data/ui/MenulibreWindow.ui.h:31 ../menulibre/MenulibreApplication.py:355
 msgid "Revert"
-msgstr ""
+msgstr "Malfari"
 
 #: ../data/ui/MenulibreWindow.ui.h:32 ../menulibre/MenulibreApplication.py:362
 msgid "Delete"
-msgstr ""
+msgstr "Forigi"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Move Up"
-msgstr ""
+msgstr "Movi supren"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Move Down"
-msgstr ""
+msgstr "Movi suben"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>Dosiernomo</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<big><b>Application Name</b></big>"
@@ -192,7 +192,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:39 ../menulibre/MenulibreApplication.py:682
 msgid "Description"
-msgstr ""
+msgstr "Priskribo"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid ""
@@ -205,15 +205,15 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Command"
-msgstr ""
+msgstr "Ordono"
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "The working directory."
-msgstr ""
+msgstr "La kuranta dosierujo."
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Working Directory"
-msgstr ""
+msgstr "Kuranta dosierujo"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
@@ -249,27 +249,27 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "<b>Options</b>"
-msgstr ""
+msgstr "<b>Opcioj</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Add"
-msgstr ""
+msgstr "Aldoni"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Remove"
-msgstr ""
+msgstr "Forigi"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "Clear"
-msgstr ""
+msgstr "Vakigi"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "Show"
-msgstr ""
+msgstr "Montri"
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "Name"
-msgstr ""
+msgstr "Nomo"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Select an icon…"
@@ -280,11 +280,11 @@ msgstr ""
 #: ../menulibre/Dialogs.py:124 ../menulibre/Dialogs.py:132
 #: ../menulibre/MenulibreIconSelection.py:79
 msgid "Cancel"
-msgstr ""
+msgstr "Nuligi"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Apply"
-msgstr ""
+msgstr "Apliki"
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid "<b>Select an icon</b>"
@@ -292,11 +292,11 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Search"
-msgstr ""
+msgstr "Serĉi"
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "column"
-msgstr ""
+msgstr "kolumno"
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Search terms…"
@@ -309,7 +309,7 @@ msgstr ""
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/Dialogs.py:37
 msgid "About MenuLibre"
-msgstr ""
+msgstr "Pri MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
@@ -343,16 +343,16 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:83 ../menulibre/Dialogs.py:99
 msgid "Save Changes"
-msgstr ""
+msgstr "Konservi ŝanĝojn"
 
 #: ../menulibre/Dialogs.py:84 ../menulibre/Dialogs.py:100
 msgid "Don't Save"
-msgstr ""
+msgstr "Ne konservi"
 
 #: ../menulibre/Dialogs.py:86 ../menulibre/Dialogs.py:102
 #: ../menulibre/MenulibreApplication.py:334
 msgid "Save"
-msgstr ""
+msgstr "Konservi"
 
 #: ../menulibre/Dialogs.py:90
 msgid "Do you want to save the changes before leaving this launcher?"
@@ -382,12 +382,12 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:133 ../menulibre/MenulibreIconSelection.py:80
 msgid "OK"
-msgstr ""
+msgstr "Bone"
 
 #: ../menulibre/MenuEditor.py:86 ../menulibre/MenulibreApplication.py:1028
 #: ../menulibre/MenulibreApplication.py:1460
 msgid "Separator"
-msgstr ""
+msgstr "Apartigilo"
 
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:39
@@ -396,15 +396,15 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:40
 msgid "Development"
-msgstr ""
+msgstr "Programado"
 
 #: ../menulibre/MenulibreApplication.py:41
 msgid "Education"
-msgstr ""
+msgstr "Edukado"
 
 #: ../menulibre/MenulibreApplication.py:42
 msgid "Games"
-msgstr ""
+msgstr "Ludoj"
 
 #: ../menulibre/MenulibreApplication.py:43
 msgid "Graphics"
@@ -412,19 +412,19 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:44
 msgid "Internet"
-msgstr ""
+msgstr "Interreto"
 
 #: ../menulibre/MenulibreApplication.py:45
 msgid "Office"
-msgstr ""
+msgstr "Oficejo"
 
 #: ../menulibre/MenulibreApplication.py:46
 msgid "Settings"
-msgstr ""
+msgstr "Agordoj"
 
 #: ../menulibre/MenulibreApplication.py:47
 msgid "System"
-msgstr ""
+msgstr "Sistemo"
 
 #: ../menulibre/MenulibreApplication.py:48
 msgid "Accessories"
@@ -432,7 +432,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:49
 msgid "WINE"
-msgstr ""
+msgstr "WINE"
 
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:51
@@ -450,11 +450,11 @@ msgstr ""
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:55
 msgid "GNOME application"
-msgstr ""
+msgstr "GNOME-aplikaĵo"
 
 #: ../menulibre/MenulibreApplication.py:56
 msgid "GTK+ application"
-msgstr ""
+msgstr "GTK+-aplikaĵo"
 
 #: ../menulibre/MenulibreApplication.py:57
 msgid "GNOME user configuration"
@@ -510,47 +510,47 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:312
 msgid "Add _Launcher..."
-msgstr ""
+msgstr "Aldoni _lanĉilon..."
 
 #: ../menulibre/MenulibreApplication.py:313
 msgid "Add Launcher..."
-msgstr ""
+msgstr "Aldoni lanĉilon..."
 
 #: ../menulibre/MenulibreApplication.py:319
 msgid "Add _Directory..."
-msgstr ""
+msgstr "Aldoni _dosierujon..."
 
 #: ../menulibre/MenulibreApplication.py:320
 msgid "Add Directory..."
-msgstr ""
+msgstr "Aldoni dosierujon..."
 
 #: ../menulibre/MenulibreApplication.py:326
 msgid "_Add Separator..."
-msgstr ""
+msgstr "_Add Separator..."
 
 #: ../menulibre/MenulibreApplication.py:327
 msgid "Add Separator..."
-msgstr ""
+msgstr "Aldoni apartigilon..."
 
 #: ../menulibre/MenulibreApplication.py:333
 msgid "_Save"
-msgstr ""
+msgstr "Kon_servi"
 
 #: ../menulibre/MenulibreApplication.py:340
 msgid "_Undo"
-msgstr ""
+msgstr "_Malfari"
 
 #: ../menulibre/MenulibreApplication.py:347
 msgid "_Redo"
-msgstr ""
+msgstr "_Refari"
 
 #: ../menulibre/MenulibreApplication.py:354
 msgid "_Revert"
-msgstr ""
+msgstr "_Malfari"
 
 #: ../menulibre/MenulibreApplication.py:361
 msgid "_Delete"
-msgstr ""
+msgstr "_Forigi"
 
 #: ../menulibre/MenulibreApplication.py:368
 msgid "_Quit"
@@ -563,29 +563,29 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "_Contents"
-msgstr ""
+msgstr "_Enhavoj"
 
 #: ../menulibre/MenulibreApplication.py:376
 #: ../menulibre/MenulibreApplication.py:1729
 msgid "Help"
-msgstr ""
+msgstr "Helpo"
 
 #: ../menulibre/MenulibreApplication.py:382
 msgid "_About"
-msgstr ""
+msgstr "_Pri"
 
 #: ../menulibre/MenulibreApplication.py:383
 #: ../menulibre/MenulibreApplication.py:1730
 msgid "About"
-msgstr ""
+msgstr "Pri"
 
 #: ../menulibre/MenulibreApplication.py:505
 msgid "Categories"
-msgstr ""
+msgstr "Kategorioj"
 
 #: ../menulibre/MenulibreApplication.py:507
 msgid "Actions"
-msgstr ""
+msgstr "Agoj"
 
 #: ../menulibre/MenulibreApplication.py:509
 msgid "Advanced"
@@ -597,7 +597,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:674
 msgid "Select a category"
-msgstr ""
+msgstr "Elekti kategorion"
 
 #: ../menulibre/MenulibreApplication.py:677
 msgid "Category Name"
@@ -613,7 +613,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:962
 msgid "Select a working directory..."
-msgstr ""
+msgstr "Elekti kurantan dosierujon..."
 
 #: ../menulibre/MenulibreApplication.py:965
 msgid "Select an executable..."
@@ -640,11 +640,11 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1410
 msgid "New Launcher"
-msgstr ""
+msgstr "Nova lanĉilo"
 
 #: ../menulibre/MenulibreApplication.py:1444
 msgid "New Directory"
-msgstr ""
+msgstr "Nova dosierujo"
 
 #: ../menulibre/MenulibreApplication.py:1678
 msgid "Are you sure you want to delete this separator?"
@@ -657,11 +657,11 @@ msgstr ""
 
 #: ../menulibre/MenulibreIconSelection.py:76
 msgid "Select an image"
-msgstr ""
+msgstr "Elekti bildon"
 
 #: ../menulibre/MenulibreIconSelection.py:84
 msgid "Images"
-msgstr ""
+msgstr "Bildoj"
 
 #. Create a new column.
 #: ../menulibre/MenulibreTreeview.py:59
