--- a/po/sr.po
+++ b/po/sr.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2014-11-16 17:08+0000\n"
+"PO-Revision-Date: 2016-02-13 15:39+0000\n"
 "Last-Translator: Саша Петровић <salepetronije@gmail.com>\n"
 "Language-Team: српски <српски <xfce-i18n@xfce.org>>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-09-28 06:11+0000\n"
-"X-Generator: Launchpad (build 17754)\n"
+"X-Launchpad-Export-Date: 2016-02-14 06:07+0000\n"
+"X-Generator: Launchpad (build 17925)\n"
 "Language: sr\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -153,11 +153,11 @@ msgstr "Покреће га Д-сабирница"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Прегледај иконице…"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Files..."
-msgstr ""
+msgstr "Прегледај датотеке..."
 
 #: ../data/ui/MenulibreWindow.ui.h:27 ../menulibre/Dialogs.py:38
 #: ../menulibre/MenulibreApplication.py:236
@@ -532,7 +532,7 @@ msgstr "Остало"
 
 #: ../menulibre/MenulibreApplication.py:213
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "Слободни изборник се не може користити под кореним налогом."
 
 #: ../menulibre/MenulibreApplication.py:214
 msgid ""
@@ -540,6 +540,9 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Молим, погледајте <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>опис на мрежи</a> "
+"за више података."
 
 #: ../menulibre/MenulibreApplication.py:312
 msgid "Add _Launcher..."
