--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2014-03-28 04:04+0000\n"
-"Last-Translator: leo523 <Unknown>\n"
+"PO-Revision-Date: 2016-02-15 19:30+0000\n"
+"Last-Translator: Adriano Ramos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-09-28 06:11+0000\n"
-"X-Generator: Launchpad (build 17754)\n"
+"X-Launchpad-Export-Date: 2016-02-16 05:38+0000\n"
+"X-Generator: Launchpad (build 17925)\n"
 "Language: pt_BR\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -84,11 +84,11 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "The MIME type(s) supported by this application."
-msgstr ""
+msgstr "Os tipos MIME suportados por esta aplicação."
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Mimetypes"
-msgstr ""
+msgstr "Tipos MIME"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid ""
@@ -99,7 +99,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "Keywords"
-msgstr ""
+msgstr "Palavras chave"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid ""
@@ -290,7 +290,7 @@ msgstr "Aplicar"
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid "<b>Select an icon</b>"
-msgstr ""
+msgstr "<b>Selecione um ícone</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Search"
@@ -329,11 +329,11 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:63
 msgid "Read Online"
-msgstr ""
+msgstr "Ler online"
 
 #: ../menulibre/Dialogs.py:64
 msgid "Online Documentation"
-msgstr ""
+msgstr "Documentação Online"
 
 #: ../menulibre/Dialogs.py:75
 msgid "Do you want to save the changes before closing?"
@@ -341,15 +341,15 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:76
 msgid "If you don't save the launcher, all the changes will be lost.'"
-msgstr ""
+msgstr "Se você não salvar o lançador todas as alterações serão perdidas.'"
 
 #: ../menulibre/Dialogs.py:83 ../menulibre/Dialogs.py:99
 msgid "Save Changes"
-msgstr ""
+msgstr "Salvar Alterações"
 
 #: ../menulibre/Dialogs.py:84 ../menulibre/Dialogs.py:100
 msgid "Don't Save"
-msgstr ""
+msgstr "Não Salvar"
 
 #: ../menulibre/Dialogs.py:86 ../menulibre/Dialogs.py:102
 #: ../menulibre/MenulibreApplication.py:334
@@ -358,19 +358,19 @@ msgstr "Salvar"
 
 #: ../menulibre/Dialogs.py:90
 msgid "Do you want to save the changes before leaving this launcher?"
-msgstr ""
+msgstr "Você quer salvar as alterações antes de sair deste lançador?"
 
 #: ../menulibre/Dialogs.py:92
 msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
+msgstr "Se você não salvar o lançador todas as alterações serão perdidas."
 
 #: ../menulibre/Dialogs.py:106
 msgid "This cannot be undone."
-msgstr ""
+msgstr "Isso não pode ser desfeito."
 
 #: ../menulibre/Dialogs.py:115
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Você tem certeza que quer restaurar este lançador?"
 
 #: ../menulibre/Dialogs.py:116
 msgid ""
@@ -380,16 +380,16 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:125 ../menulibre/Dialogs.py:126
 msgid "Restore Launcher"
-msgstr ""
+msgstr "Restaurar Lançador"
 
 #: ../menulibre/Dialogs.py:133 ../menulibre/MenulibreIconSelection.py:80
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: ../menulibre/MenuEditor.py:86 ../menulibre/MenulibreApplication.py:1028
 #: ../menulibre/MenulibreApplication.py:1460
 msgid "Separator"
-msgstr ""
+msgstr "Separador"
 
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:39
