Launchpad automatic translations update.

--- a/po/hr.po
+++ b/po/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2013-12-04 05:59+0000\n"
-"Last-Translator: freedomrun <Unknown>\n"
+"PO-Revision-Date: 2016-02-16 17:46+0000\n"
+"Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-09-28 06:11+0000\n"
-"X-Generator: Launchpad (build 17754)\n"
+"X-Launchpad-Export-Date: 2016-02-17 05:44+0000\n"
+"X-Generator: Launchpad (build 17925)\n"
 "Language: hr\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -24,23 +24,23 @@ msgstr "Uređivač izbornika"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
-msgstr ""
+msgstr "Dodaj ili ukloni program iz izbornika"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Dodaj _pokretač"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "Dodaj _direktorij"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr ""
+msgstr "Dodaj _razdjelnik"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "Generičko ime programa, na primjer \" Web preglednik\"."
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "Generic Name"
@@ -135,7 +135,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Pregleda ikone...."
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Files..."
@@ -149,7 +149,7 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Save Launcher"
-msgstr ""
+msgstr "Spremi pokretač"
 
 #: ../data/ui/MenulibreWindow.ui.h:29 ../menulibre/MenulibreApplication.py:341
 msgid "Undo"
@@ -177,7 +177,7 @@ msgstr "Pomakni Dolje"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>Datotečno ime</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<big><b>Application Name</b></big>"
@@ -210,7 +210,7 @@ msgstr "Naredba"
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "The working directory."
-msgstr ""
+msgstr "Radni direktorij."
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Working Directory"
@@ -218,7 +218,7 @@ msgstr "Radni direktorij"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
-msgstr ""
+msgstr "<b>Pojedinosti programa</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -274,7 +274,7 @@ msgstr "Naziv"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Select an icon…"
-msgstr ""
+msgstr "Izaberite ikonu..."
 
 #: ../data/ui/MenulibreWindow.ui.h:59 ../menulibre/Dialogs.py:62
 #: ../menulibre/Dialogs.py:85 ../menulibre/Dialogs.py:101
@@ -289,7 +289,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid "<b>Select an icon</b>"
-msgstr ""
+msgstr "<b>Izaberite ikonu</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Search"
@@ -301,7 +301,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Search terms…"
-msgstr ""
+msgstr "Traži pojmove..."
 
 #: ../menulibre/__init__.py:33
 msgid "Show debug messages"
@@ -310,25 +310,27 @@ msgstr ""
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/Dialogs.py:37
 msgid "About MenuLibre"
-msgstr ""
+msgstr "O MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
-msgstr ""
+msgstr "Autorska prava © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "Želi te li čitati MenuLibre priručnik online?"
 
 #: ../menulibre/Dialogs.py:56
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
+"Biti ćete preusmjereni na web stranicu dokumentacije gdje se održavaju "
+"stranice pomoći."
 
 #: ../menulibre/Dialogs.py:63
 msgid "Read Online"
-msgstr ""
+msgstr "Čitaj Online"
 
 #: ../menulibre/Dialogs.py:64
 msgid "Online Documentation"
@@ -336,11 +338,11 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:75
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "Želite li spremiti izmjene prije zatvaranja?"
 
 #: ../menulibre/Dialogs.py:76
 msgid "If you don't save the launcher, all the changes will be lost.'"
-msgstr ""
+msgstr "Ako ne spremite pokretač, sve će izmjene biti izgubljene."
 
 #: ../menulibre/Dialogs.py:83 ../menulibre/Dialogs.py:99
 msgid "Save Changes"
@@ -357,11 +359,11 @@ msgstr "Spremi"
 
 #: ../menulibre/Dialogs.py:90
 msgid "Do you want to save the changes before leaving this launcher?"
-msgstr ""
+msgstr "Želite li spremiti izmjene prije napuštanja ovoga pokretača?"
 
 #: ../menulibre/Dialogs.py:92
 msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
+msgstr "Ako ne spremite pokretač, sve će izmjene biti izgubljene."
 
 #: ../menulibre/Dialogs.py:106
 msgid "This cannot be undone."
@@ -369,7 +371,7 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:115
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Jeste li sigurni da želite obnoviti ovaj pokretač?"
 
 #: ../menulibre/Dialogs.py:116
 msgid ""
@@ -379,7 +381,7 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:125 ../menulibre/Dialogs.py:126
 msgid "Restore Launcher"
-msgstr ""
+msgstr "Obnovi pokretač"
 
 #: ../menulibre/Dialogs.py:133 ../menulibre/MenulibreIconSelection.py:80
 msgid "OK"
@@ -446,16 +448,16 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:53
 msgid "Hardware configuration"
-msgstr ""
+msgstr "Konfiguracija sklopovlja"
 
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:55
 msgid "GNOME application"
-msgstr ""
+msgstr "GNOME program"
 
 #: ../menulibre/MenulibreApplication.py:56
 msgid "GTK+ application"
-msgstr ""
+msgstr "GTK+ program"
 
 #: ../menulibre/MenulibreApplication.py:57
 msgid "GNOME user configuration"
@@ -474,7 +476,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:62
 #: ../menulibre/MenulibreApplication.py:63
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Stavka Xfce izbornika"
 
 #: ../menulibre/MenulibreApplication.py:64
 msgid "Xfce toplevel menu item"
@@ -511,27 +513,27 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:312
 msgid "Add _Launcher..."
-msgstr ""
+msgstr "Dodaj _pokretač..."
 
 #: ../menulibre/MenulibreApplication.py:313
 msgid "Add Launcher..."
-msgstr ""
+msgstr "Dodaj pokretač..."
 
 #: ../menulibre/MenulibreApplication.py:319
 msgid "Add _Directory..."
-msgstr ""
+msgstr "Dodaj _direktorij..."
 
 #: ../menulibre/MenulibreApplication.py:320
 msgid "Add Directory..."
-msgstr ""
+msgstr "Dodaj direktorij..."
 
 #: ../menulibre/MenulibreApplication.py:326
 msgid "_Add Separator..."
-msgstr ""
+msgstr "_Dodaj razdjelnik..."
 
 #: ../menulibre/MenulibreApplication.py:327
 msgid "Add Separator..."
-msgstr ""
+msgstr "Dodaj razdjelnik..."
 
 #: ../menulibre/MenulibreApplication.py:333
 msgid "_Save"
@@ -606,7 +608,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:761
 msgid "This Entry"
-msgstr ""
+msgstr "Ovaj unos"
 
 #: ../menulibre/MenulibreApplication.py:816
 msgid "New Shortcut"
@@ -614,7 +616,7 @@ msgstr "Nova Prečica"
 
 #: ../menulibre/MenulibreApplication.py:962
 msgid "Select a working directory..."
-msgstr ""
+msgstr "Odaberite radni direktorij..."
 
 #: ../menulibre/MenulibreApplication.py:965
 msgid "Select an executable..."
@@ -634,14 +636,16 @@ msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"Ovaj pokretač je uklonjen iz sustava.\n"
+"Odabirem slijedeću dostupnu stavku."
 
 #: ../menulibre/MenulibreApplication.py:1178
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "Nemate dozvolu za brisanje ove datoteke."
 
 #: ../menulibre/MenulibreApplication.py:1410
 msgid "New Launcher"
-msgstr ""
+msgstr "Novi pokretač"
 
 #: ../menulibre/MenulibreApplication.py:1444
 msgid "New Directory"
@@ -649,7 +653,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1678
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "Jeste li sigurni da želite izbrisati ovaj razdjelnik?"
 
 #: ../menulibre/MenulibreApplication.py:1681
 #, python-format
@@ -671,7 +675,7 @@ msgstr "Rezultati Pretraživanja"
 
 #: ../menulibre/MenulibreXdg.py:53
 msgid "New Menu Item"
-msgstr ""
+msgstr "Nova stavka izbornika"
 
 #: ../menulibre/MenulibreXdg.py:55
 msgid "A small descriptive blurb about this application."
