--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2016-02-15 19:30+0000\n"
+"PO-Revision-Date: 2016-02-17 22:45+0000\n"
 "Last-Translator: Adriano Ramos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-02-16 05:38+0000\n"
+"X-Launchpad-Export-Date: 2016-02-18 05:49+0000\n"
 "X-Generator: Launchpad (build 17925)\n"
 "Language: pt_BR\n"
 
@@ -119,7 +119,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Hidden"
-msgstr ""
+msgstr "Ocultado"
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid ""
@@ -131,15 +131,15 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "DBUS Activatable"
-msgstr ""
+msgstr "DBUS Ativável"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Procurar ícones..."
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Files..."
-msgstr ""
+msgstr "Procurar arquivos..."
 
 #: ../data/ui/MenulibreWindow.ui.h:27 ../menulibre/Dialogs.py:38
 #: ../menulibre/MenulibreApplication.py:236
@@ -177,7 +177,7 @@ msgstr "Mover para baixo"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>Nome do arquivo</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<big><b>Application Name</b></big>"
@@ -275,7 +275,7 @@ msgstr "Nome"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Select an icon…"
-msgstr ""
+msgstr "Selecione um ícone..."
 
 #: ../data/ui/MenulibreWindow.ui.h:59 ../menulibre/Dialogs.py:62
 #: ../menulibre/Dialogs.py:85 ../menulibre/Dialogs.py:101
@@ -319,7 +319,7 @@ msgstr ""
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "Você quer ler o manual online do MenuLibre?"
 
 #: ../menulibre/Dialogs.py:56
 msgid ""
@@ -337,7 +337,7 @@ msgstr "Documentação Online"
 
 #: ../menulibre/Dialogs.py:75
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "Você quer salvar as alterações antes de fechar?"
 
 #: ../menulibre/Dialogs.py:76
 msgid "If you don't save the launcher, all the changes will be lost.'"
@@ -377,6 +377,8 @@ msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Todas as alterações desde o último estado salvo serão perdidas e não podem "
+"ser restauradas automaticamente."
 
 #: ../menulibre/Dialogs.py:125 ../menulibre/Dialogs.py:126
 msgid "Restore Launcher"
