--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2016-02-21 11:17+0000\n"
-"Last-Translator: Jean-Marc <Unknown>\n"
+"PO-Revision-Date: 2016-03-05 22:22+0000\n"
+"Last-Translator: YS1 <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-02-22 05:52+0000\n"
-"X-Generator: Launchpad (build 17925)\n"
+"X-Launchpad-Export-Date: 2016-03-06 05:43+0000\n"
+"X-Generator: Launchpad (build 17936)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
@@ -55,9 +55,10 @@ msgid ""
 "XFCE, Old"
 msgstr ""
 "Une liste des environnements qui ne devraient pas afficher cette entrée. "
-"Vous ne pouvez utiliser cette clé que si « Afficher seulement dans » est "
-"défini. Parmi les valeurs possibles : GNOME, KDE, LXDE, MATE, Razor, ROX, "
-"TDE, Unity, XFCE, Old"
+"Vous ne pouvez utiliser cette clé que si « Afficher seulement dans » n'est "
+"pas défini.\n"
+"Parmi les valeurs possibles : GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
+"Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -73,8 +74,9 @@ msgid ""
 msgstr ""
 "Une liste des environnements qui devraient afficher cette entrée. Les autres "
 "environnements n'afficheront pas cette entrée. Vous ne pouvez utiliser cette "
-"clé que si « Ne pas afficher dans » est défini. Parmi les valeurs possibles "
-": GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
+"clé que si « Ne pas afficher dans » n'est pas défini.\n"
+"Parmi les valeurs possibles : GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
+"Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
